fixed some overflow on filter page

--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -5,12 +5,13 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__values {
     font-size: 12px;
     color: $text-color-brightness-50;
-
+    min-width: 102px;
     @media (max-width: $phone-width) {
       font-size: 10px;
     }
