--- a/src/pages/filter-page/filter-page.scss
+++ b/src/pages/filter-page/filter-page.scss
@@ -64,6 +64,7 @@
     font-size: 24px;
     line-height: 29px;
     font-weight: $bold;
+    max-width: 530px;
 
     @media (max-width: $phone-width) {
       font-size: 20px;
